[gd_scene load_steps=12 format=3 uid="uid://cdwpkrmu4rjl1"]

[ext_resource type="Script" uid="uid://covped1ue2v3w" path="res://scripts/shopmenu.gd" id="1_6s37m"]
[ext_resource type="Texture2D" uid="uid://boaaxbrg026j1" path="res://assets/farmingTilesheetComplete.png" id="2_ojmih"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t7j7w"]
atlas = ExtResource("2_ojmih")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdpeq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7j7w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ouitj"]
atlas = ExtResource("2_ojmih")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmhk4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouitj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ec5j3"]
atlas = ExtResource("2_ojmih")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ofjs"]
atlas = ExtResource("2_ojmih")
region = Rect2(192, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4wold"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec5j3")
}],
"loop": true,
"name": &"berryseed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ofjs")
}],
"loop": true,
"name": &"randomseed",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c40eh"]
atlas = ExtResource("2_ojmih")
region = Rect2(64, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5snn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c40eh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="shopmenu" type="StaticBody2D"]
visible = false
script = ExtResource("1_6s37m")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 141.0
offset_bottom = 75.0
color = Color(0.26028818, 0.26028818, 0.26028818, 1)

[node name="ButtonLeft" type="Button" parent="."]
offset_left = 4.0
offset_top = 36.0
offset_right = 39.0
offset_bottom = 56.0
theme_override_colors/icon_normal_color = Color(0.9462667, 0.9462667, 0.9462667, 0.47058824)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ButtonLeft"]
position = Vector2(24, 11)
rotation = 1.5707964
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_fdpeq")

[node name="ButtonRight" type="Button" parent="."]
offset_left = 41.0
offset_top = 36.0
offset_right = 73.0
offset_bottom = 56.0
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 0.4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ButtonRight"]
position = Vector2(11, 8)
rotation = -1.5707964
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_nmhk4")

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 17)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4wold")
animation = &"berryseed"

[node name="coin_icon" type="AnimatedSprite2D" parent="."]
position = Vector2(82, 18)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_w5snn")

[node name="pricelabel" type="RichTextLabel" parent="."]
offset_left = 43.0
offset_top = 6.0
offset_right = 83.0
offset_bottom = 46.0
theme_override_font_sizes/normal_font_size = 16
text = "100"

[node name="buybutton" type="Button" parent="."]
offset_left = 81.0
offset_top = 35.0
offset_right = 121.0
offset_bottom = 58.0
text = "BUY"

[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="buybutton" to="." method="_on_buybutton_pressed"]
